# ChangeLog for media-video/mplayer2
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  02 Sep 2012; Nikoli <nikoli@lavabit.com> mplayer2-2.0_p20120828.ebuild,
  mplayer2-9999.ebuild:
  aqua supports opengl

*mplayer2-2.0_p20120828 (01 Sep 2012)

  01 Sep 2012; Nikoli <nikoli@lavabit.com> +mplayer2-2.0_p20120828.ebuild,
  mplayer2-9999.ebuild, metadata.xml:
  new snapshot, add USE quvi

*mplayer2-2.0_p20120815 (19 Aug 2012)

  19 Aug 2012; Nikoli <nikoli@lavabit.com> +files/mplayer2-py2compat.patch,
  +mplayer2-2.0_p20120815.ebuild, mplayer2-9999.ebuild:
  new snapshot, update live ebuild

  17 Jun 2012; Ben de Groot <yngwin@gentoo.org> -mplayer2-2.0_p20111126.ebuild,
  -mplayer2-2.0_p20120309.ebuild, mplayer2-2.0_p20120517.ebuild,
  mplayer2-9999.ebuild, metadata.xml:
  Remove old. Move USE=ass to global libass usage.

  13 Jun 2012; Nikoli <nikoli@lavabit.com> mplayer2-2.0_p20120517.ebuild,
  mplayer2-9999.ebuild:
  sync with mplayer1

  23 May 2012; Nikoli <nikoli@lavabit.com> mplayer2-2.0_p20120517.ebuild,
  mplayer2-9999.ebuild:
  USE dirac was removed from libav

*mplayer2-2.0_p20120517 (23 May 2012)

  23 May 2012; Nikoli <nikoli@lavabit.com> +mplayer2-2.0_p20120517.ebuild,
  mplayer2-9999.ebuild, metadata.xml:
  new snapshot, add USE portaudio and postproc

  18 May 2012; Nikoli <nikoli@lavabit.com> mplayer2-2.0_p20111126.ebuild,
  mplayer2-2.0_p20120309.ebuild, mplayer2-9999.ebuild:
  upstream removed ao arts and esd; migrate to virtual/pkgconfig; fix sed

  29 Apr 2012; Nikoli <nikoli@lavabit.com> mplayer2-9999.ebuild:
  upstream removed support for cdparanoia

  24 Apr 2012; Nikoli <nikoli@lavabit.com> mplayer2-2.0_p20120309.ebuild,
  mplayer2-9999.ebuild:
  sync with portage, remove "--disable-kai", thanks to nfk

*mplayer2-2.0_p20120309 (23 Mar 2012)

  23 Mar 2012; Nikoli <nikoli@lavabit.com> +mplayer2-2.0_p20120309.ebuild:
  version bump

  23 Mar 2012; Nikoli <nikoli@lavabit.com> mplayer2-2.0_p20111126.ebuild,