@@ -1,16 +1,16 @@
-From c2bf465af05a65639557ef7f6e9200f793568ce2 Mon Sep 17 00:00:00 2001
+From 2cef169d4c8872394065606821075c7acb71ef25 Mon Sep 17 00:00:00 2001
 From: =?UTF-8?q?Tom=C3=A1=C5=A1=20Chv=C3=A1tal?= <tchvatal@suse.cz>
 Date: Mon, 13 Aug 2012 14:12:05 +0200
 Subject: [PATCH] Add py2 compat. Now scripts work under both py3 and py2.
 
 ---
- TOOLS/file2string.py     |    4 ++--
+ TOOLS/file2string.py     |    7 +++++--
  TOOLS/matroska.py        |    4 +++-
  TOOLS/vdpau_functions.py |    2 +-
- 3 files changed, 6 insertions(+), 4 deletions(-)
+ 3 files changed, 9 insertions(+), 4 deletions(-)
 
 diff --git a/TOOLS/file2string.py b/TOOLS/file2string.py
-index 002ba4a..1627fa2 100755
+index 002ba4a..1f8d493 100755
 --- a/TOOLS/file2string.py
 +++ b/TOOLS/file2string.py
 @@ -1,4 +1,4 @@
@@ -19,12 +19,15 @@ index 002ba4a..1627fa2 100755
  
  # Convert the contents of a file into a C string constant.
  # Note that the compiler will implicitly add an extra 0 byte at the end
-@@ -16,7 +16,7 @@ def main(infile):
+@@ -16,7 +16,10 @@ def main(infile):
      for c, esc in ("\nn", "\tt", r"\\", '""'):
          conv[ord(c)] = '\\' + esc
      for line in infile:
 -        sys.stdout.write('"' + ''.join(conv[c] for c in line) + '"\n')
-+        sys.stdout.write('"' + ''.join(conv[ord(c)] for c in line) + '"\n')
++        try:
++            sys.stdout.write('"' + ''.join(conv[ord(c)] for c in line) + '"\n')
++        except TypeError:
++            sys.stdout.write('"' + ''.join(conv[c] for c in line) + '"\n')
  
  with open(sys.argv[1], 'rb') as infile:
      sys.stdout.write("// Generated from %s\n\n" % sys.argv[1])
